mmc websit laid out completely

--- a/aboutus.html
+++ b/aboutus.html
@@ -75,7 +75,7 @@
          <div class="container custom-header">
              <div class="row">
                  <div id="menuzord" class="menuzord">
-                    <a href="home.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
+                    <a href="index.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
                     <div class="header-contact">
                          <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -91,12 +91,12 @@
                          </li>
                          <li><a href="programmes.html">PROGRAMMES</a>
                              <ul class="dropdown">
-                                 <li><a href="practice-area-1.html">CAREER ACTIVATION FOUNDRY</a></li>
-                                 <li><a href="practice-area-2.html">DIRECT MENTORING SCHEME</a></li>
-                                 <li><a href="practice-area-2.html">MASTER CLASSES</a></li>
-                                 <li><a href="practice-area-block.html">ENTREPRENEURSHIP CLINIC</a></li>
-                                 <li><a href="practice-area-2.html">BUSINESS LUNCH</a></li>
-                                 <li><a href="practice-area-2.html">BUSINESS PITCH FOR FUND</a></li>
+                                <li><a href="programmes.html#program">CAREER ACTIVATION FOUNDRY</a></li>
+                                <li><a href="programmes.html#program">DIRECT MENTORING SCHEME</a></li>
+                                <li><a href="programmes.html#program">MASTER CLASSES</a></li>
+                                <li><a href="programmes.html#program">ENTREPRENEURSHIP CLINIC</a></li>
+                                <li><a href="programmes.html#program">BUSINESS LUNCH</a></li>
+                                <li><a href="programmes.html#program">BUSINESS PITCH FOR FUND</a></li>
                              </ul>
                          </li>
                          <li><a href="champions.html">CHAMPIONS</a>
@@ -188,13 +188,13 @@
                             <div class="progress_cont">
                                 <div class="skill">Councelling<span class="pull-right"></span> </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">70% Complete (success)</span> </div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"> <span class="sr-only">70% Complete (success)</span> </div>
                                 </div>
                             </div>
                             <div class="progress_cont">
                                 <div class="skill">Mentoring<span class="pull-right"></span> </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">80% Complete (success)</span> </div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">80% Complete (success)</span> </div>
                                 </div>
                             </div>
                             <div class="progress_cont">
@@ -206,13 +206,13 @@
                             <div class="progress_cont">
                                 <div class="skill">Internship and Job opportunities<span class="pull-right"></span> </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">74% Complete (success)</span> </div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="74" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">74% Complete (success)</span> </div>
                                 </div>
                             </div>
                             <div class="progress_cont">
                                 <div class="skill">Other Areas <span class="pull-right"></span> </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">64% Complete (success)</span> </div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="64" aria-valuemin="0" aria-valuemax="100" style="width: 0%"> <span class="sr-only">64% Complete (success)</span> </div>
                                 </div>
                             </div>
                         </div>
@@ -386,7 +386,7 @@
                         <div class="h-2-p-c-details">
                             <div class="h-2-p-c-default">
                                 <i class="fa fa-child"></i>
-                                <h2><a href="#">Career Activation Foundry</a></h2>
+                                <h2><a href="programmes.html">Career Activation Foundry</a></h2>
                                 <p>Career Activation laundry</a></h2>
                                     <p>Career Activation Foundry: This is a conference of undergraduate, graduate and unemployed youth and members of MMC...</p>
                                 <a href="programmes.html">More <i class="fa fa-long-arrow-right"></i></a>
@@ -399,7 +399,7 @@
                                 <i class="fa  fa-fire"></i>
                                 <h2><a href="programmes.html">Direct mentoring scheme</a></h2>
                                 <p>This is a six-monthly program that involves assigning direct mentors to Muslim professionals and entrepreneurs in early stages of career....</p>
-                                <a href="#">More <i class="fa fa-long-arrow-right"></i></a>
+                                <a href="programmes.html">More <i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -407,9 +407,9 @@
                         <div class="h-2-p-c-details">
                             <div class="h-2-p-c-default">
                                 <i class="fa fa-shopping-cart"></i>
-                                <h2><a href="#">Skill-up Training Session</a></h2>
+                                <h2><a href="programmes.html">Skill-up Training Session</a></h2>
                                 <p>This is a completely special training session dedicated to training participants on critical skills... </p>
-                                <a href="#">More <i class="fa fa-long-arrow-right"></i></a>
+                                <a href="programmes.html">More <i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -417,9 +417,9 @@
                         <div class="h-2-p-c-details">
                             <div class="h-2-p-c-default">
                                 <i class="fa fa-female"></i>
-                                <h2><a href="#">Digital Presence</a></h2>
+                                <h2><a href="programmes.html">Digital Presence</a></h2>
                                 <p>This involves providing continuous enlightenment, guidance, education and mentoring through regular sessions conducted on the online platforms...<a href="#program">read more...</p>
-                                <a href="#">More <i class="fa fa-long-arrow-right"></i></a>
+                                <a href="programmes.html">More <i class="fa fa-long-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -592,46 +592,58 @@
     ============================== -->   
 
     <footer class="footer-area">
-        <div class="footer-content" style="padding-top: 20px;">
+        <div class="footer-head">
             <div class="container">
-                <div class="row footer-cols">
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-first-content f-all-h2">
-                            <h2>Muslim Mentorship Connect</h2>
-                            <p>MMC was established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs.</p>
-                            <i class="fa fa-twitter-square"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                <div class="row">
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>We are MMC</h3>
+                            <p style="color: #bfbfbf;">We are established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs..</p>
+                            <p><a href="#"></a></p>
                         </div>
-                    </div><br><br>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-second-content f-all-h2">
-                            <h2>Twitter</h2>
-                        </div>
-                        <div class="social-container"></div>
-                        
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-third-content f-all-h2">
-                            <h2>Instagram</h2>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Twitter</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
-                        <div class="social-container"></div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-fourth-content f-all-h2">
-                            <h2>LinkedIn</h2>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Instagram</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
-                        <div class="social-container"></div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Linkedin</h3>
+                            <h2></h2>
+                            <p><a href="#">View Map</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="footer-content">
+          
         <div class="container">
             <div class="row">
                <div class="footer-bottom clearfix">
                     <div class="col-md-6 col-sm-6 no-padding-left">
                         <div class="f-bottom-left-text">
-                            <p>Muslim Mentorship Connect © All Rights Reserved. With Love by <span><a href="#">MMC Interns</a></span> </p>
+                            <p>MMC © All Rights Reserved. With Love by <span><a href="#">interns</a></span> </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 no-padding-right">
+                        <div class="f-bottom-right-text">
+                            <ul>
+                                <li><a href="news.html">News</a></li>
+                                <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="resources.html">Careers</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
