--- a/champions.html
+++ b/champions.html
@@ -83,7 +83,7 @@
          <div class="container custom-header">
              <div class="row">
                  <div id="menuzord" class="menuzord">
-                    <a href="home.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
+                    <a href="index.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
                     <div class="header-contact">
                          <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -613,22 +613,29 @@
                 <div class="row">
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Call Us Now !</h3>
-                            <h2>002 0106 5370701</h2>
-                            <p><a href="#">24/7 Available</a></p>
+                            <h3>We are MMC</h3>
+                            <p style="color: #bfbfbf;">We are established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs..</p>
+                            <p><a href="#"></a></p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Send Us Message !</h3>
-                            <h2>7oroof@7oroof.com</h2>
-                            <p><a href="#">24/7 Available</a></p>
+                            <h3>Twitter</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-6">
+                    <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Visit Our Office !</h3>
-                            <h2>Alnahas Building, 2 AlBahr St, Tanta AlGharbia, Egypt.</h2>
+                            <h3>Instagram</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Linkedin</h3>
+                            <h2></h2>
                             <p><a href="#">View Map</a></p>
                         </div>
                     </div>
