--- a/faqs.html
+++ b/faqs.html
@@ -106,7 +106,7 @@
          <div class="container custom-header">
              <div class="row">
                  <div id="menuzord" class="menuzord">
-                    <a href="home.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
+                    <a href="index.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
                     <div class="header-contact">
                          <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -122,12 +122,12 @@
                          </li>
                          <li><a href="programmes.html">PROGRAMMES</a>
                              <ul class="dropdown">
-                                 <li><a href="practice-area-1.html">CAREER ACTIVATION FOUNDRY</a></li>
-                                 <li><a href="practice-area-2.html">DIRECT MENTORING SCHEME</a></li>
-                                 <li><a href="practice-area-2.html">MASTER CLASSES</a></li>
-                                 <li><a href="practice-area-block.html">ENTREPRENEURSHIP CLINIC</a></li>
-                                 <li><a href="practice-area-2.html">BUSINESS LUNCH</a></li>
-                                 <li><a href="practice-area-2.html">BUSINESS PITCH FOR FUND</a></li>
+                                <li><a href="programmes.html#program">CAREER ACTIVATION FOUNDRY</a></li>
+                                <li><a href="programmes.html#program">DIRECT MENTORING SCHEME</a></li>
+                                <li><a href="programmes.html#program">MASTER CLASSES</a></li>
+                                <li><a href="programmes.html#program">ENTREPRENEURSHIP CLINIC</a></li>
+                                <li><a href="programmes.html#program">BUSINESS LUNCH</a></li>
+                                <li><a href="programmes.html#program">BUSINESS PITCH FOR FUND</a></li>
                              </ul>
                          </li>
                          <li><a href="champions.html">CHAMPIONS</a>
@@ -290,46 +290,58 @@
     ============================== -->   
 
     <footer class="footer-area">
-        <div class="footer-content">
+        <div class="footer-head">
             <div class="container">
-                <div class="row footer-cols">
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-first-content f-all-h2">
-                            <h2>Muslim Mentorship Connect</h2>
-                            <p>MMC was established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs.</p>
-                            <i class="fa fa-twitter-square"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                <div class="row">
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>We are MMC</h3>
+                            <p style="color: #bfbfbf;">We are established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs..</p>
+                            <p><a href="#"></a></p>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-second-content f-all-h2">
-                            <h2>Twitter</h2>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Twitter</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
-                        <div class="social-container"></div>
-                        
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-third-content f-all-h2">
-                            <h2>Instagram</h2>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Instagram</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
-                        <div class="social-container"></div>
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-fourth-content f-all-h2">
-                            <h2>LinkedIn</h2>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Linkedin</h3>
+                            <h2></h2>
+                            <p><a href="#">View Map</a></p>
                         </div>
-                        <div class="social-container"></div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="footer-content">
+          
         <div class="container">
             <div class="row">
                <div class="footer-bottom clearfix">
                     <div class="col-md-6 col-sm-6 no-padding-left">
                         <div class="f-bottom-left-text">
-                            <p>Muslim Mentorship Connect © All Rights Reserved. With Love by <span><a href="#">7oroof.com</a></span> </p>
+                            <p>MMC © All Rights Reserved. With Love by <span><a href="#">interns</a></span> </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 no-padding-right">
+                        <div class="f-bottom-right-text">
+                            <ul>
+                                <li><a href="news.html">News</a></li>
+                                <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="resources.html">Careers</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
