--- a/resources.html
+++ b/resources.html
@@ -120,7 +120,7 @@
          <div class="container custom-header">
              <div class="row">
                  <div id="menuzord" class="menuzord">
-                    <a href="home.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
+                    <a href="index.html" class="menuzord-brand"><img src="images/mmc_logo.jpeg" width="35" height="51" alt="mmc-image" color="#FFDF00">MMC <span>Engage! connect! grow!!!</span></a>
                     <div class="header-contact">
                          <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -136,12 +136,12 @@
                          </li>
                          <li><a href="programmes.html">PROGRAMMES</a>
                              <ul class="dropdown">
-                                 <li><a href="practice-area-1.html">CAREER ACTIVATION FOUNDRY</a></li>
-                                 <li><a href="practice-area-2.html">DIRECT MENTORING SCHEME</a></li>
-                                 <li><a href="practice-area-2.html">MASTER CLASSES</a></li>
-                                 <li><a href="practice-area-block.html">ENTREPRENEURSHIP CLINIC</a></li>
-                                 <li><a href="practice-area-2.html">BUSINESS LUNCH</a></li>
-                                 <li><a href="practice-area-2.html">BUSINESS PITCH FOR FUND</a></li>
+                                <li><a href="programmes.html#program">CAREER ACTIVATION FOUNDRY</a></li>
+                                <li><a href="programmes.html#program">DIRECT MENTORING SCHEME</a></li>
+                                <li><a href="programmes.html#program">MASTER CLASSES</a></li>
+                                <li><a href="programmes.html#program">ENTREPRENEURSHIP CLINIC</a></li>
+                                <li><a href="programmes.html#program">BUSINESS LUNCH</a></li>
+                                <li><a href="programmes.html#program">BUSINESS PITCH FOR FUND</a></li>
                              </ul>
                          </li>
                          <li><a href="champions.html">CHAMPIONS</a>
@@ -1054,22 +1054,29 @@
                 <div class="row">
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Call Us Now !</h3>
-                            <h2>002 0106 5370701</h2>
-                            <p><a href="#">24/7 Available</a></p>
+                            <h3>We are MMC</h3>
+                            <p style="color: #bfbfbf;">We are established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs..</p>
+                            <p><a href="#"></a></p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Send Us Message !</h3>
-                            <h2>7oroof@7oroof.com</h2>
-                            <p><a href="#">24/7 Available</a></p>
+                            <h3>Twitter</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-6">
+                    <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Visit Our Office !</h3>
-                            <h2>Alnahas Building, 2 AlBahr St, Tanta AlGharbia, Egypt.</h2>
+                            <h3>Instagram</h3>
+                            <h2></h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
+                        </div>
+                    </div>
+                    <div class="col-sm-3 col-md-3">
+                        <div class="f-h-content">
+                            <h3>Linkedin</h3>
+                            <h2></h2>
                             <p><a href="#">View Map</a></p>
                         </div>
                     </div>
@@ -1089,11 +1096,10 @@
                     <div class="col-md-6 col-sm-6 no-padding-right">
                         <div class="f-bottom-right-text">
                             <ul>
-                                <li><a href="news">News</a></li>
-                                <li><a href="faqs">FAQs</a></li>
-                                <li><a href="careers">Careers</a></li>
+                                <li><a href="news.html">News</a></li>
+                                <li><a href="faqs.html">FAQs</a></li>
+                                <li><a href="resources.html">Careers</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Terms of Use</a></li>
                             </ul>
                         </div>
                     </div>
