will re-adjust some content of landing page

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         <div class="col-md-1">
                                 <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 padded">
                                 <h5 class="post-events-heading">MMC CAF 4.0. Ilorin</h5>
                                 <h6 class="post-events-date">June, 29, 2019</h6>
                                 <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -605,7 +605,7 @@
                     <div class="col-md-1">
                         <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 padded">
                         <h5 class="post-events-heading">MMC CAF 4.0. Ilorin</h5>
                         <h6 class="post-events-date">June, 29, 2019</h6>
                         <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -615,7 +615,7 @@
                     <div class="col-md-1">
                         <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 padded">
                         <h5 class="post-events-heading">MMC CAF 4.0. Ilorin</h5>
                         <h6 class="post-events-date">June, 29, 2019</h6>
                         <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -625,7 +625,7 @@
                     <div class="col-md-1">
                         <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 padded">
                             <h5 class="post-events-heading">MMC CAF 4.0. Ilorin</h5>
                             <h6 class="post-events-date">June, 29, 2019</h6>
                             <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -639,7 +639,7 @@
                         <div class="col-md-1">
                             <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 padded">
                                 <h5 class="post-events-heading">MMC CAF 5.0</h5>
                                 <h6 class="post-events-date">Coming soon</h6>
                                 <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -649,7 +649,7 @@
                         <div class="col-md-1">
                             <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 padded">
                                 <h5 class="post-events-heading">MMC CAF 5.0</h5>
                                 <h6 class="post-events-date">Coming soon</h6>
                                 <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -659,7 +659,7 @@
                         <div class="col-md-1">
                             <img src="images/practice-area-1-blog.jpg" alt="showcasing" width="150px" height="150px">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 padded">
                                 <h5 class="post-events-heading">MMC CAF 5.0</h5>
                                 <h6 class="post-events-date">Coming soon</h6>
                                 <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
@@ -669,10 +669,10 @@
                         <div class="col-md-1">
                             <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 padded">
                                 <h5 class="post-events-heading">MMC CAF 5.0</h5>
                                 <h6 class="post-events-date">Coming soon</h6>
-                                <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
+                                <p>A hundred and fifty participants, Five dignitories, sirene environents, Experience driven and lot of fun.</p>
                         </div>
                     </div><br>
                     <a href="#"><button class="black-btn">VIEW ALL</button></a> <br>
